# basil

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml   .readthedocs.yaml  .travis.yml  =1.8.1  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  VERSION  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: regression-tests.yml  wheels.yml
basil/: __init__.py  dut.py
basil/HL/: Arduino.py  FEI4AdapterCard.py  FEI4QuadModuleAdapterCard.py  FadcConf.py  GPAC.py  HardwareLayer.py  JtagGpio.py  JtagMaster.py  MIO_PLL.py  NTCRegister.py  RegisterHardwareLayer.py  SensirionBridgeDevice.py  SentioProber.py  SignatoneProber.py  SussProber.py  XPT.py  agilent33250a.py  agilent_33250a.yaml  agilent_e3644a.yaml  arduino_base.py  arduino_env_readout.py  arduino_grove_4channel_relay.py  arduino_ntc_readout.py  arduino_relay_board.py  arduino_serial_to_i2c.py  binder_mk53.py  binder_mk56.py  bram_fifo.py  bronkhorst_elflow.py  cmd_rd53.py  cmd_seq.py  debyeflex3003.py  fadc_rx.py  fast_spi_rx.py  fei4_rx.py  gpio.py  hp4284a.py  hp_4284a.yaml  hp_81104a.yaml  hp_e3632a.yaml  (+56 more)
basil/RL/: FunctionalRegister.py  Register.py  RegisterLayer.py  StdRegister.py  TrackRegister.py
basil/TL/: Dummy.py  PrologixVisa.py  SensirionSensorBridge.py  Serial.py  SiSim.py  SiTcp.py  SiTransferLayer.py  SiUart.py  SiUsb.py  SiUsb3.py  Socket.py  TransferLayer.py  Visa.py
basil/utils/: BitLogic.py  DataManipulation.py  README.md  USBBinds.py  bus_check.py  buscheck.py  utils.py
branches/hcmos/: .project
device/modules/: README.rst
docs/: Makefile  README.md  conf.py  examples.rst  firmware.rst  hardware.rst  index.rst  introduction.rst  make.bat  modules.rst  requirements.txt  software.rst
docs/_static/: WaveDrom_load.js  theme_overrides.css
docs/_templates/: layout.html
examples/bdaq/: .gitignore  Readme.md  bdaq.py  bdaq.yaml  bdaq53_eth.py  bdaq53_eth.yaml  run.tcl
examples/lab_devices/: MotorStage.py  ProbeStation.py  SentioProber.py  SentioProber_config.yaml  SignatoneProber.yaml  WeissLabEvent_socket.yaml  WeissSB22_pyserial.yaml  agilent33250a_pyserial.yaml  arduino.py  arduino.yaml  arduino_ntc_readout.py  arduino_ntc_readout.yaml  arduino_relay_board.py  arduino_relay_board.yaml  arduino_serial_to_i2c.py  arduino_serial_to_i2c.yaml  binderMK53_pyserial.yaml  binderMK56_socket.yaml  bronkhorstELFLOW_pyserial.yaml  bronkhorsteflow.py  hp_4284a_pyvisa.yaml  hp_81104a_pyvisa.yaml  iseg_shq.py  iseg_shq.yaml  julabo1000F_pyserial.yaml  julaboF32HD.py  julaboF32HD.yaml  julaboFP50.py  julaboFP50_pyserial.yaml  keithley2000_pyvisa.yaml  keithley2400_pyserial.yaml  keithley2400_pyvisa.yaml  keithley2410_pyserial.yaml  keithley2410_pyvisa.yaml  keithley2450_pyvisa.yaml  keithley2634b.yaml  keithley6517a.py  keithley6517a_pyvisa.yaml  mercury_pyserial.yaml  prologix_pyvisa.yaml  (+19 more)
examples/mio3_eth_gpac/: README.md  mio3_eth_gpac.py  mio3_eth_gpac.yaml
examples/mio_pixel/: pixel.py  pixel.yaml
examples/mio_sram_test/: sram_test.py  sram_test.yaml
examples/mmc3_eth/: Readme.md  mmc3_eth.py  mmc3_eth.yaml  mmc3_eth_throughput_test.py  readme.md  test_SimRBCP.py  test_mmc3_eth.yaml
examples/mmc3_eth_sim/: mmc3_eth_tb.v
examples/mmc3_eth_sim_bram/: Makefile  Sim_mmc3_eth.py  mmc3_eth.py  mmc3_eth.py~  mmc3_eth.yaml  mmc3_eth_tb.v
examples/mmc3_si570/: Si570_configuration.py  frequency  mmc3_i2c.yaml
examples/register_example/: simple_register_example.py  simple_register_example.yaml
examples/tdc_bdaq/: SiTCP.xdc  bdaq53.xdc  tdc_bdaq.py  tdc_bdaq.v  tdc_bdaq.xdc  tdc_bdaq.yaml  tdl_bdaq53.v  tdl_bdaq53.xdc  tdl_bdaq53_core_bb.v  vivado.jou  vivado_pid3036421.debug  vivado_pid3036421.str
examples/test_eth/: test_eth.py
firmware/Arduino/: Arduino.ino
firmware/modules/: README.rst
host/: MANIFEST.in  pydaq.py  setup.py
sim_build/: Vtop.cpp  Vtop.h  Vtop.mk  Vtop__Dpi.h  Vtop__Syms.cpp  Vtop__Syms.h  Vtop___024root.h  Vtop___024root__DepSet_heccd7ead__0.cpp  Vtop___024root__DepSet_heccd7ead__0__Slow.cpp  Vtop___024root__Slow.cpp  Vtop__ver.d  Vtop_classes.mk  verilator.d
sw/: basil.py
tests/: Makefile  formatting.yaml  jtag_tap.v  test_BitLogic.py  test_Register.py  test_RegisterHardwareLayer.py  test_RegisterHardwareLayer.yaml  test_RegisterHardwareLayer_configuration.yaml  test_SimAdcRx.py  test_SimAdcRx.v  test_SimCmdRD53.py  test_SimCmdRD53.v  test_SimCmdRd53.py  test_SimCmdSeq.py  test_SimCmdSeq.v  test_SimFifo8to32.py  test_SimFifo8to32.v  test_SimFifo8to32_sbus.py  test_SimGpio.py  test_SimGpio.v  test_SimGpio_sbus.py  test_SimGpio_sbus.v  test_SimGpio_sbus1.py  test_SimGpio_sbus2.py  test_SimGpio_sbus_top.v  test_SimI2c.py  test_SimI2c.v  test_SimJtagGpio.py  test_SimJtagGpio.v  test_SimJtagMaster.py  test_SimJtagMaster.v  test_SimM26.py  test_SimM26.v  test_SimSCPIFormatting.py  test_SimScpi.py  test_SimSeq.py  test_SimSeq.v  test_SimSi570.py  test_SimSpi.py  test_SimSpi.v  (+16 more)
(+1326 files in other folders)
